Add more proper health logic
